Fixed nav color + fixed threestep alignment

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -11,10 +11,7 @@
     "transition",
     "background-color #{_duration(transition)} ease-in-out"
   );
-  background-color: transparentize(
-    desaturate(lighten(_palette(bg), 3), 1.5),
-    0.05
-  );
+  background-color: transparentize(_palette(bg), 0.05);
   height: 3.5em;
   left: 0;
   line-height: 3.5em;
