--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -98,6 +98,7 @@
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 #threeStepContactButton {
